--- a/index.html
+++ b/index.html
@@ -1,312 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Abhishek</title>
-  <link rel='icon' href='images.png'>
-  <link rel="stylesheet" href="todo.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
-
-
-
-  <script>
-    $(document).ready(function () {
-      $('.dropdown-submenu a.test').on("click", function (e) {
-        $(this).next('ul').toggle();
-        e.stopPropagation();
-        e.preventDefault();
-      });
-    });
-  </script>
-
-  <style>
-    .dropdown-submenu {
-      position: relative;
-      color: red;
-    }
-
-    .dropdown-submenu .dropdown-menu {
-      top: 0;
-      left: 100%;
-      margin-top: -1px;
-      color: red;
-    }
-  </style>
+	<meta charset="UTF-8">
+	<title>Certificate</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <div class="scroll-up-btn">
-    <i class="fas fa-angle-up"></i>
+	<div class="wrapper">
+			<nav class="navbar">
+				<img class="logo" src="logo.jpg">
+			</nav>
+			<div class="center">
+			 <div class="boxed">
+ <p>Phython for data science(COGNITIVE CLASS)</p>
+        <a href ="https://courses.cognitiveclass.ai/certificates/bb25105555ce4b45b95333f4a2df0639">Certificate credential</a>
+</div>
+        <br>
+         <div class="boxed">
+ <p>Google IT Support(COURSERA)</p>
+        <a href ="https://coursera.org/share/e8b55623055f88ac092f26c304c8d855">Certificate credential</a>
+</div>
+         <br>
+         <div class="boxed">
+ <p>Google Data Analytics(COURSERA)</p>
+        <a href ="https://coursera.org/share/f374d5baffbf9f2bde2e4e6ad7038726">Certificate credential</a>
+</div>
+         <br>
+         <div class="boxed">
+ <p>Some courses done in HACKERRANK</p>
+       <div class="dropdown">
+  <div id="myDropdown" class="dropdown-content">
+    <a href="https://www.hackerrank.com/certificates/d68798e35800">Java(Basic)</a>
+    <br>
+    <a href="https://www.hackerrank.com/certificates/18843b7fbb47">Phython(Basic)</a>
+        <br>
+    <a href="https://www.hackerrank.com/certificates/fc22921f0bd9">SQL(BASIC)</a>
+        <br>
+     <a href="https://www.hackerrank.com/certificates/ebd61da3119f">SQL(INTERMEDIATE)</a>
   </div>
-  <nav class="navbar">
-    <div class="max-width">
-      <div class="logo"><a href="#">Deta<span>ils.</span></a></div>
-      <ul class="menu">
-        <li><a href="#home" class="menu-btn">Home</a></li>
-        <li><a href="#about" class="menu-btn">About</a></li>
-        <li><a href="#Education" class="menu-btn">Education</a></li>
-        <li><a href="#skills" class="menu-btn">Skills</a></li>
-        <li><a href="#Project" class="menu-btn">Projects</a></li>
-        <li><a href="#contact" class="menu-btn">Contact</a></li>
-      </ul>
-      <div class="menu-btn">
-        <i class="fas fa-bars"></i>
-      </div>
-    </div>
-  </nav>
-  <!-- home section start -->
-  <section class="home" id="home">
-    <div class="max-width">
-      <div class="home-content">
-        <div class="text-1">Hello, my name is</div>
-        <div class="text-2">Abhishek kumar</div>
-        <div class="text-3">And I'm a <span class="typing"></span></div>
-        <!--   <a href="#">Hire me</a> -->
-      </div>
-    </div>
-  </section>
-  <!-- about section start -->
-  <section class="about" id="about">
-    <div class="max-width">
-      <h2 class="title">About me</h2>
-      <div class="about-content">
-        <div class="column left">
-          <img src="images/profile-1.jpeg" alt="">
-        </div>
-        <div class="column right">
-          <div class="text">I'm Abhishek and I'm a <span class="typing-2"></span></div>
-          <p>Hi! 👋 I'm Abhishek, a 21-year-old engineering sophomore pursuing BTech in Computer Science. I am a
-            passionate self-learner, Open source enthusiast, exploring and building projects👨‍💻 using various
-            technologies. 
-            <!-- I am a frontend web developer well versed in HTML, CSS, JavaScript and stand at a
-            beginner-intermediate level of React. -->
-          </p>
-          <a href="Abhishek_cv.pdf" target="_blank">Download CV</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Education section start -->
-  <section class="Education" id="Education">
-    <div class="max-width">
-      <h2 class="title">My Education</h2>
-      <div class="serv-content">
-        <div class="card">
-          <div class="box">
-            <!--  <i class="fas fa-paint-brush"></i> -->
-            <img src="images/ees.jpeg" alt="" width="150px" lenhth="50px">
-            <div class="text"><a href="https://www.edwardschool.co.in/" target="_blank"><mark>Edwards English
-                  School</mark></a></div>
-            <p>I had done my primary education from EES, jamtara and Secured 80.2% in my class 10 examinations.</p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="box">
-            <!--  <i class="fas fa-chart-line"></i> -->
-            <img src="images/dav.jpg" alt="" width="
-180px" lenhth="70px">
-            <div class="text"><a href="http://sddavjamtara.co.in/" target="_blank"><mark>S.D. D.A.V. Public
-                  School</mark></a></div>
-            <p>I had done my Secondary education from S.D. DAV Public School, jamtara and Secured 87.8% in my class 12
-              examinations. </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="box">
-            <!--  <i class="fas fa-code"></i> -->
-            <img src="images/iter.jpg" alt="" width="150px" lenhth="50px">
-            <div class="text"><a href="https://www.soa.ac.in/iter" target="_blank"><mark>ITER</mark></a></div>
-            <p>Currently, i am pursuing my btech degree in CSE from ITER, Bhubaneswar.Till 6th Semester i have
-              maintained A CGPA of 9.24.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-  <!-- skills section start -->
-  <section class="skills" id="skills">
-    <div class="max-width">
-      <h2 class="title">My skills</h2>
-      <div class="skills-content">
-        <div class="container">
-          <div class="dropdown">
-            <span class="caret"></span></button>
-            <ul class="dropdown-menu">
-              <li class="dropdown-submenu">
-                <a class="test" tabindex="-1" href="#">Languages that I have picked up over the years<span
-                    class="caret"></span></a>
-                <ul class="dropdown-menu" style="display:none;">
-                  <li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)" target="_blank">JAVA</a> </li>
-                  <li> <a href="https://en.wikipedia.org/wiki/Python_(programming_language)" target="_blank">PYTHON</a>
-                  </li>
-                  <li><a href="https://en.wikipedia.org/wiki/HTML" target="_blank">HTML</a> </li>
-                  <li> <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">CSS</a> </li>
-                  <li> <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">JavaScript</a> </li>
-                  <li> <a href="https://en.wikipedia.org/wiki/MySQL" target="_blank">MySQL</a> </li>
-                </ul>
-              </li>
-              <!--       <li class="dropdown-submenu">
-        <a class="test" tabindex="-1" href="#">Libraries and Frameworks that I prefer to work with<span class="caret"></span></a>
-        <ul class="dropdown-menu" style = "display:none;">
-             <li><a href="https://en.wikipedia.org/wiki/Bootstrap_(front-end_framework)" target="_blank">BOOTSTRAP</a> </li>
-              <li> <a href="https://en.wikipedia.org/wiki/React_(JavaScript_library)"taarget="_blank">REACTJS</a> </li>
-               <li><a href="https://en.wikipedia.org/wiki/Node.js"target="_blank">NODEJS</a> </li>
-        </ul>
-      </li> -->
-              <li class="dropdown-submenu">
-                <a class="d1" href="https://Certificate.of-abhishek-kumar.repl.co" target="_blank"
-                  style="color: green">Certificates<span class="caret"></span></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Project section start -->
-  <section class="Project" id="Project">
-    <div class="max-width">
-      <h2 class="title">My Recent Projects</h2>
-      <div class="carousel owl-carousel">
-        <div class="card">
-          <div class="box">
-            <img src="images/pp1.gif" alt="">
-            <div class="text"><a href="https://details.of-abhishek-kumar.repl.co/"> Personal Website</a></div>
-            <p>Website made using html,css and javascript.</p>
-          </div>
-        </div>
-        <!--       <div class="card">
-                    <div class="box">
-                      <a href="https://windows11.of-abhishek-kumar.repl.co" target="_blank">
-                        <img src="images/cc1.png" alt="">
-                        <div class="text">windows 11 clone </a></div>
-                        <p>i made it using html and css </p>
-                    </div>
-                </div> 
-               <div class="card">
-                    <div class="box">
-                        <img src="images/tic-tac-toe.jpg" alt="">
-                        <div class="text"><a href="https://tictactoe-1.of-abhishek-kumar.repl.co" target="_blank">Tic Tac Toe game</a></div>
-                        <p>I made it using python</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="images/ww1.png" alt="">
-                        <div class="text"><a href="https://whiteboard.of-abhishek-kumar.repl.co">whiteboard</a></div>
-                        <p>A simple whiteboard build using canva tag </p>
-                    </div>
-                </div> 
-            </div>
-        </div> -->
-  </section>
-  <!-- contact section start -->
-  <section class="contact" id="contact">
-    <div class="max-width">
-      <h2 class="title">Contact me</h2>
-      <div class="contact-content">
-        <div class="column left">
-          <div class="text">Feel free to ask any Query</div>
-          <div class="icons">
-            <div class="row">
-              <i class="fas fa-user"></i>
-              <div class="info">
-                <div class="head">Name</div>
-                <div class="sub-title">Abhishek Kumar</div>
-              </div>
-            </div>
-            <div class="row">
-              <i class="fas fa-map-marker-alt"></i>
-              <div class="info">
-                <div class="head">Address</div>
-                <div class="sub-title">Jamtara, Jharkhand</div>
-              </div>
-            </div>
-            <div class="row">
-              <i class="fas fa-envelope"></i>
-              <div class="info">
-                <div class="head">Email</div>
-                <div class="sub-title"><a id="email" href="mailto:abhishekkumar.student1@gmail.com">
-                    abhishekkumar.student1@gmail.com </a>
+</div>
+</div>
+			<div class="buttons">
+			<button> <a href ="https://Details.of-abhishek-kumar.repl.co">Return to main page</a></button>
+		</div>
+		</div>
 
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="column right">
-          <div class="text">Message Me</div>
-
-          <form action="https://formspree.io/f/xdobpqrg" method="POST">
-            <div class="fields">
-              <div class="field name">
-                <input type="text" placeholder="Name" required name="Name">
-              </div>
-
-              <div class="field email">
-                <input type="email" placeholder="Email" required name="email">
-              </div>
-            </div>
-            <!--                         <div class="field">
-                            <input type="text" placeholder="Subject" required name ="subject">
-                        </div> -->
-            <div class="field textarea">
-              <textarea cols="80" rows="40" placeholder="Message.." required name="Message"></textarea>
-            </div>
-            <div class="button-area">
-              <button type="submit ">Send message</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-
-    <div class="follow">
-      <p><strong>Do follow me on </strong></p>
-      <div class="social-icons">
-        <!--               <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a> 
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>  -->
-
-
-        <a href="https://www.instagram.com/i__m__abhishek___/" target="_blank">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/contact-abhishek" target="_blank">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-
-      </div>
-    </div>
-    </div>
-
-    <!-- <h2 id="counter">Visitor counter</h2>
-    <h3 id="count">0</h3> -->
-
-
-  </section>
-
-
-  <!-- footer section start -->
-  <span>
-    <div class="mydiv3">
-      <p align="left">Made By</p>
-      <p align="left">ABHISHEK KUMAR</p>
-      <h5 align="right">Copyright: &copy; 2023 Abhishek kumar</h5>
-    </div>
-  </span>
-  <script src="script.js"></script>
+   
 </body>
-
 </html>
